--- a/iso/boot/grub/grub.cfg
+++ b/iso/boot/grub/grub.cfg
@@ -1,7 +1,4 @@
-set timeout=0
-set default=0
-
-menuentry "SharkoOS" {
-    multiboot /boot/kernel.bin
+menuentry "KFS-1" {
+    multiboot /boot/kfs.bin
     boot
 }
